frontend CRUD id correction
