# fitnessWebApp-UI/src/openapi/openapi.json
@@ -201,7 +201,7 @@
         "tags": [
           "Periods"
         ],
-        "operationId": "disableActivePeriod",
+        "operationId": "disableAuthenticatedUserActivePeriodo",
         "responses": {
           "200": {
             "description": "OK",
@@ -398,46 +398,6 @@
       }
     },
     "/exercises": {
-      "get": {
-        "tags": [
-          "Exercise"
-        ],
-        "operationId": "findAllExercise",
-        "parameters": [
-          {
-            "name": "page",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 0
-            }
-          },
-          {
-            "name": "size",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 10
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PageResponseExerciseResponse"
-                }
-              }
-            }
-          }
-        }
-      },
       "post": {
         "tags": [
           "Exercise"
@@ -666,6 +626,35 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Train"
+        ],
+        "operationId": "deleteAllenamento",
+        "parameters": [
+          {
+            "name": "allenamento-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/trainings/creator": {
@@ -673,7 +662,7 @@
         "tags": [
           "Train"
         ],
-        "operationId": "findAllAllenamentoByCreator",
+        "operationId": "findAllAllenamentoByAuthenticatedUser",
         "parameters": [
           {
             "name": "page",
@@ -715,7 +704,7 @@
         "tags": [
           "Train"
         ],
-        "operationId": "findAllAllenamentoByCreator_noPagination",
+        "operationId": "findAllAllenamentoByAuthenticatedUser_noPagination",
         "responses": {
           "200": {
             "description": "OK",
@@ -733,12 +722,12 @@
         }
       }
     },
-    "/trainingexercise/{allenamento-nome}": {
+    "/trainingexercise/{allenamento-id}": {
       "get": {
         "tags": [
           "TrainExercise"
         ],
-        "operationId": "findByAllenamentoNome",
+        "operationId": "findAllAuthAllenamentoEsercizioByAllenamentoId_paginated",
         "parameters": [
           {
             "name": "page",
@@ -761,11 +750,12 @@
             }
           },
           {
-            "name": "allenamento-nome",
+            "name": "allenamento-id",
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "integer",
+              "format": "int64"
             }
           }
         ],
@@ -783,19 +773,20 @@
         }
       }
     },
-    "/trainingexercise/no_pagination/{allenamento-nome}": {
+    "/trainingexercise/no_pagination/{allenamento-id}": {
       "get": {
         "tags": [
           "TrainExercise"
         ],
-        "operationId": "findByAllenamentoNomeNoPagination",
+        "operationId": "findAllAuthAllenamentoEsercizioByAllenamentoId_NoPagination",
         "parameters": [
           {
-            "name": "allenamento-nome",
+            "name": "allenamento-id",
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "integer",
+              "format": "int64"
             }
           }
         ],
@@ -878,7 +869,7 @@
         "tags": [
           "Periods"
         ],
-        "operationId": "findPeriodoById",
+        "operationId": "findByAuthenticatedUserAndId",
         "parameters": [
           {
             "name": "periodo-id",
@@ -902,6 +893,35 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Periods"
+        ],
+        "operationId": "deletePeriodo",
+        "parameters": [
+          {
+            "name": "periodo-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/periods/is_there_an_active_period": {
@@ -909,7 +929,7 @@
         "tags": [
           "Periods"
         ],
-        "operationId": "isThereAnActivePeriod",
+        "operationId": "findAuthenticatedUserActivePeriodo",
         "responses": {
           "200": {
             "description": "OK",
@@ -929,7 +949,7 @@
         "tags": [
           "Periods"
         ],
-        "operationId": "findAllPeriodoByCreator",
+        "operationId": "findAllAuthenticatedUserPeriodo_paginated",
         "parameters": [
           {
             "name": "page",
@@ -966,12 +986,12 @@
         }
       }
     },
-    "/periodTraining/{periodo-nome}": {
+    "/periodTraining/{periodo-id}": {
       "get": {
         "tags": [
           "PeriodTraining"
         ],
-        "operationId": "findByPeriodoNome",
+        "operationId": "findAllAuthUserPeriodoAllenamentoByPeriodoId_paginated",
         "parameters": [
           {
             "name": "page",
@@ -994,11 +1014,12 @@
             }
           },
           {
-            "name": "periodo-nome",
+            "name": "periodo-id",
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "integer",
+              "format": "int64"
             }
           }
         ],
@@ -1016,19 +1037,20 @@
         }
       }
     },
-    "/periodTraining/no_pagination/{periodo-nome}": {
+    "/periodTraining/no_pagination/{periodo-id}": {
       "get": {
         "tags": [
           "PeriodTraining"
         ],
-        "operationId": "findByPeriodoNomeNoPagination",
+        "operationId": "findAllAuthUserPeriodoAllenamentoByPeriodoId_noPagination",
         "parameters": [
           {
-            "name": "periodo-nome",
+            "name": "periodo-id",
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "integer",
+              "format": "int64"
             }
           }
         ],
@@ -1077,7 +1099,7 @@
         "tags": [
           "Exercise"
         ],
-        "operationId": "findExerciseById",
+        "operationId": "findAuthenticatedUserOrDefaultExerciseById",
         "parameters": [
           {
             "name": "exercise-id",
@@ -1202,7 +1224,7 @@
         "tags": [
           "Exercise"
         ],
-        "operationId": "findAllExerciseByCreator",
+        "operationId": "findAllAuthenticatedUserExercises_paginated",
         "parameters": [
           {
             "name": "page",
@@ -1262,36 +1284,6 @@
         }
       }
     },
-    "/trainings/{allenamento-nome}": {
-      "delete": {
-        "tags": [
-          "Train"
-        ],
-        "operationId": "deleteAllenamento",
-        "parameters": [
-          {
-            "name": "allenamento-nome",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/trainingexercise/{allenamentoEsercizio-id}": {
       "delete": {
         "tags": [
@@ -1306,36 +1298,6 @@
             "schema": {
               "type": "integer",
               "format": "int64"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/periods/{periodo-nome}": {
-      "delete": {
-        "tags": [
-          "Periods"
-        ],
-        "operationId": "deletePeriodo",
-        "parameters": [
-          {
-            "name": "periodo-nome",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
             }
           }
         ],
